--- a/my_project.ipynb
+++ b/my_project.ipynb
@@ -2,20 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": [
+     "nano  ~/  .bashrcexport PYTHONPATH=$PYTHONPATH:/path/to/flask_security"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\\\python311.zip', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\\\DLLs', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\\\Lib', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0', '', 'C:\\\\Users\\\\admin\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages', 'C:\\\\Users\\\\admin\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\win32', 'C:\\\\Users\\\\admin\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\admin\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\Pythonwin', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\\\Lib\\\\site-packages', '/path/to/flask_security', '/path/to/flask_security']\n"
+      "['C:\\\\path\\\\to\\\\flask_security', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\\\python311.zip', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\\\DLLs', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\\\Lib', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0', '', 'C:\\\\Users\\\\admin\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages', 'C:\\\\Users\\\\admin\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\win32', 'C:\\\\Users\\\\admin\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\admin\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\Pythonwin', 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\\\Lib\\\\site-packages']\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "print(sys.path)\n"
+    "print(sys.path)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -71,16 +77,17 @@
     "def hash_password(password: str):\n",
     "    salt = bcrypt.gensalt()\n",
     "    return bcrypt.hashpw(password.encode(), salt).decode()\n",
-    "    return bcrypt.hashpw(password.encode(), salt).decode()\n",
-    "\n",
     "\n",
     "# Verify bcrypt hashed password\n",
     "def verify_password(password: str, hashed_password: str):\n",
     "    return bcrypt.checkpw(password.encode(), hashed_password.encode())\n",
     "\n",
+    "\n",
+    "\n",
+    " #User Class and Task Management\n",
+    " #Define user class for agents\n",
     "import json\n",
     "import os\n",
-    "\n",
     "\n",
     "class User:\n",
     "    def __init__(self, agent_id, username, password):\n",
@@ -97,8 +104,9 @@
     "        with open(file_path, \"w\") as f:\n",
     "            json.dump(user_data, f, indent=4)\n",
     "\n",
-    "import datetime\n",
     "\n",
+    "#Auditable encrypted log files for accountability.\n",
+    "import datetime\n",
     "\n",
     "SECRET_LOG_KEY = b\"hardcoded_log_key_or_password_reset_key\"\n",
     "\n",
@@ -111,9 +119,9 @@
     "        f.write(encrypted_log + \"\\n\")\n",
     "\n",
     "\n",
+    "#. CLI Interface with argparse \n",
     "import argparse\n",
-    "\n",
-    "\n",
+    "import user_manager\n",
     "\n",
     "# Load existing user data\n",
     "def load_user_data(file_path=\"users.json\"):\n",
@@ -143,14 +151,45 @@
     "    elif args.action == \"login\":\n",
     "        username = input(\"Username: \")\n",
     "        password = input(\"Password: \")\n",
-    "        print(\"Login functionality...\")\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "        print(\"Login functionality...\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project Report: Encrypted Task Manager\n",
+    "\n",
+    "## Overview of the Tool\n",
+    "This tool provides secure task management for government agents by integrating encryption, authentication, and activity logging.\n",
+    "IT enables government agents to securely:\n",
+    "\n",
+    "- Register and log in with agent IDs and passwords.\n",
+    "- Manage tasks that include classification levels.\n",
+    "- Store tasks encrypted using AES.\n",
+    "- Maintain encrypted logs for auditing.\n",
+    "\n",
+    "##  Implemented Functionality\n",
+    "- User registration with bcrypt password hashing.\n",
+    "- AES encryption for tasks and logs.\n",
+    "- Secure file management for sensitive user and task data.\n",
+    "- CLI interface for usability.\n",
+    "\n",
+    "## Challenges Faced\n",
+    "1. Implementing strong encryption while keeping it user-friendly.\n",
+    "2. Designing a flexible CLI system that supported all core functionalities.\n",
+    "\n",
+    "## Overcome Challenges\n",
+    "* I have not ever been taught on how to create hashed password so I undergone some research through google and followed up with it to complete this project.\n",
+    "\n",
+    "## Conclusion\n",
+    "The project fulfills its goals of creating a secure task manager for agents.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
